# CrossModalMedNet

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  REPRODUCIBILITY.md  app.py  inference.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  experiment_result.md
.github/workflows/: ci.yml
checkpoints/cyclegan_brain/: latest.pth
checkpoints/cyclegan_pelvis/: latest.pth
checkpoints/diffusion_brain/: latest.pt
checkpoints/diffusion_brain_unpaired/: latest.pt
configs/: cyclegan2d_brain.yaml  cyclegan2d_pelvis.yaml  cyclegan_brain.yaml  cyclegan_pelvis.yaml  dataset.yaml  diffusion_paired_brain.yaml  diffusion_paired_pelvis.yaml  diffusion_unpaired_brain.yaml  diffusion_unpaired_pelvis.yaml  paired_diffusion2.5d_brain.yaml  paired_diffusion2.5d_pelvis.yaml  pix2pix2d_brain.yaml  pix2pix2d_pelvis.yaml  pix2pix_brain.yaml  pix2pix_pelvis.yaml  preprocess.yaml  unpaired_diffusion2.5d_brain.yaml  unpaired_diffusion2.5d_pelvis.yaml
data/: dataset.py  preprocess.py
docs/: AI_FLUENCY.md  KNOWN_ISSUES.md  build_log.txt  check_graphviz.py  check_tools.py  comp_log.txt  compile_one.py  compile_reports.py  debug_write.py  final_polish.py  improve_latex.py  polish_log.txt  refactor_log.txt  refactor_reports.py  run.sh  run_compile.sh  update_comparison.py
presentation/: presentation.tex
scripts/: check_axis.py  check_dist.py  check_slices.py  generate_metrics_and_visuals.py  inspect_data.py  test_dataset.py  verify_checkpoints.py
(+54 files in other folders)
